--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "studio:dev": "dotenv -e .env.development -- prisma studio",
+    "studio:prod": "dotenv -e .env.production -- prisma studio",
     "migrate:dev": "dotenv -e .env.development -- prisma migrate dev",
+    "migrate:prod": "dotenv -e .env.production -- prisma migrate dev",
     "start:dev": "dotenv -e .env.development -- nest start --watch",
+    "prod": "dotenv -e .env.production -- nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
