--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "seed:dev": "dotenv -e .env.development -- node dist/seeder",
+    "seed:refresh:dev": "dotenv -e .env.development -- node dist/seeder --refresh",
+    "seed:prod": "dotenv -e .env.production -- node dist/seeder",
+    "seed:refresh:prod": "dotenv -e .env.production -- node dist/seeder --refresh"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -30,9 +34,13 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
     "@prisma/client": "^4.11.0",
+    "@types/firebase": "^3.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv-cli": "^7.0.0",
+    "firebase": "^9.17.2",
+    "firebase-admin": "^11.5.0",
+    "nestjs-seeder": "^0.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
